# clipboard-js

./: index.js  package-lock.json  package.json
cgo/: hello.c  hello.h  main.dylib  main.go
cgo2/: CMakeLists.txt  hello.c  libgohello.h  main  main.go  test.c
cgo2/test2/: libgohello.dylib  libgohello2.dylib  libgohello3.dylib  test
cgo2/test3/: libgohello.h
cgo2/test4/: CMakeLists.txt  main.go
cgo3/: index.js  index2.js  libclipboard.dylib  libclipboard.h  main  main.c
golang/: .gitkeep  callback.c  callback.h  libmylib.h  mylib.go
libs/: mylib.dylib  mylib.h
nodejs-ffi-go/: dylib.go  index.js  libcall.dylib  libcall.h  storage_kit.dylib  storage_kit.h
nodejs-ffi-go/callback/: callback.c  callback.h
